--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "vite-solid-tailwind-starter",
+  "name": "project-board",
   "version": "1.0.0",
-  "description": "Starter using Vite + Solid + Tailwind CSS",
+  "description": "Project Board",
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
@@ -19,9 +20,12 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.7.0",
+    "@supabase/supabase-js": "^2.7.0",
     "eslint-plugin-solid": "^0.9.3",
     "lodash": "^4.17.21",
     "pocketbase": "^0.10.0",
-    "solid-js": "^1.0.0"
+    "solid-js": "^1.0.0",
+    "solid-pocketbase-hooks": "^0.1.0",
+    "solidjs-use": "^1.0.0"
   }
 }
