--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,14 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
-    // "paths": {
-    //   "lib/*": ["lib/*"],
-    //   "views/*": ["src/views/*"],
-    //   "components/*": ["components/*"],
-    // },
+    "paths": {
+      "lib/*": ["lib/*"],
+      "views/*": ["src/views/*"],
+      "components/*": ["components/*"],
+    },
     "baseUrl": "./src"
   },
   "include": ["src"],
